# scam-detection

./: .gitignore  STRUCTURE.md  model_backup.pkl  pyproject.toml  requirements.txt  vectorizer.pkl  vectorizer_backup.pkl
docs/: LABEL_NORMALIZATION_GUIDE.md  RETRAIN_GUIDE.md
notebooks/: index.ipynb  index2.ipynb  index3.ipynb
scripts/: app.py  audio_input.py  data_loader.py  integrated.py  live.py  main.py  quick_retrain.py  retrain_model.py  text_processor.py  transcriber.py
